--- a/style2(main).css
+++ b/style2(main).css
@@ -27,7 +27,7 @@ body {
 }
 
 .logo {
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg'); /* Updated from main, more reliable URL */
+    background-image: url('amazon_logo.png'); /* Updated from main, more reliable URL */
     background-size: contain; /* 'contain' from main is better for logo scaling than 'cover' from Grok */
     background-repeat: no-repeat;
     height: 100%;
